# libbee

./: .appveyor.yml  COPYING  Makefile.am  README.md  bootstrap.conf  configure.ac
src/: .gitignore  Makefile.am  lib.c  libbee.h  private.h
tests/: .gitignore  Makefile.am  arithmetic.c  comparison.c  logic.c  memory.c  tests.h
